--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,19 +3,17 @@
     "version": "1.0",
     "description": "You wouldn't understand :'(",
     "manifest_version": 2,
-    "page_action": {
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+    },
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "16": "images/img16.png",
-            "32": "images/img32.png",
-            "48": "images/img48.png",
-            "128": "images/img128.png"
+            "720": "images/img720.png"
         }
     },
     "icons": {
-        "16": "images/img16.png",
-        "32": "images/img32.png",
-        "48": "images/img48.png",
-        "128": "images/img128.png"
+        "720": "images/img720.png"
     }
 }
